--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ plainwhite:
 
   # generate social links in footer
   social_links:
-    twitter: Percy
+    twitter: 40e5bGjllBjuwFK
     github:  pangxuanrong
     #linkedIn: in/thelehhman
     rss: rss
