--- a/_config.yml
+++ b/_config.yml
@@ -1,56 +1,19 @@
-title: Welcome to my personal homepage
-author: pangxuanrong
-email: 921704720@qq.com
-description: > # this means to ignore newlines until "show_exerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-show_excerpts: true # set to true to show excerpts on the homepage
+# Site settings
+name: Xuanrong Pang
+location: 深圳
+company: IBM
+position: Java开发工程师
+github: https://github.com/
+facebook: https://www.facebook.com/
+phone: 1580424XXXX
+email: xxxx@xxx.com
 
-# Minima date format
-# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
-sass:
-  sass_dir: _sass
-plainwhite:
-  name: Xuanrong Pang
-  tagline: while there is life, there is hope.
-  date_format: "%b %-d, %Y"
-  sitemap: true # set to true to generate sitemap.xml content
+baseurl: "D:/pangxuanrong.github.io"
 
-  # generate social links in footer
-  social_links:
-    #twitter: Percy
-    github:  pangxuanrong
-    #linkedIn: in/thelehhman
-    rss: rss
-    # dribbble: jekyll
-    # facebook: jekyll
-    # flickr:   jekyll
-    # instagram: jekyll
-    # linkedin: jekyll
-    # pinterest: jekyll
-    # youtube: jekyll
-    # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
-    # youtube_channel_name: CloudCannon
-    # telegram: jekyll
-    # googleplus: +jekyll
-    # microdotblog: jekyll
+permalink: /:year/:month/:day/:title/
 
-    # Mastodon instances
-    # mastodon:
-    # - username: jekyll
-    #   instance: example.com
-    # - username: jekyll2
-    #   instance: example.com
-
-# If you want to link only specific pages in your header, uncomment
-# this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.md
+exclude: ['README.md']
 
 # Build settings
-theme: plainwhite
+markdown: kramdown
 
-plugins:
-  - jekyll-seo-tag
-#  - jekyll-feed
