--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ sass:
   sass_dir: _sass
 plainwhite:
   name: Xuanrong Pang
-  tagline: while there if life, there is hope
+  tagline: Bad times make a good man.
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
 
